Docs/VP.h


typedef enum vp_event_t
{
	VP_EVENT_CHAT,
	VP_EVENT_AVATAR_ADD,
	VP_EVENT_AVATAR_CHANGE,
	VP_EVENT_AVATAR_DELETE,
	VP_EVENT_OBJECT,
	VP_EVENT_OBJECT_CHANGE,
	VP_EVENT_OBJECT_DELETE,
	VP_EVENT_OBJECT_CLICK,
	VP_EVENT_WORLD_LIST,
	VP_EVENT_WORLD_SETTING,
	VP_EVENT_WORLD_SETTINGS_CHANGED,
	VP_EVENT_FRIEND,
	VP_EVENT_WORLD_DISCONNECT,
	VP_EVENT_UNIVERSE_DISCONNECT,
	VP_EVENT_USER_ATTRIBUTES,
	VP_EVENT_CELL_END,
    VP_EVENT_TERRAIN_NODE,
    VP_EVENT_AVATAR_CLICK,
    VP_EVENT_TELEPORT,
    VP_EVENT_URL,
    VP_EVENT_OBJECT_BUMP_BEGIN,
    VP_EVENT_OBJECT_BUMP_END,
	VP_HIGHEST_EVENT
} vp_event_t;
typedef enum vp_callback_t
{
	VP_CALLBACK_OBJECT_ADD,
	VP_CALLBACK_OBJECT_CHANGE,
	VP_CALLBACK_OBJECT_DELETE,
	VP_CALLBACK_GET_FRIENDS,
	VP_CALLBACK_FRIEND_ADD,
	VP_CALLBACK_FRIEND_DELETE,
    VP_CALLBACK_TERRAIN_QUERY,
    VP_CALLBACK_TERRAIN_NODE_SET,
    VP_CALLBACK_OBJECT_GET,
	VP_HIGHEST_CALLBACK
} vp_callback_t;
typedef enum vp_int_attribute_t
{
	VP_AVATAR_SESSION,
	VP_AVATAR_TYPE,
	VP_MY_TYPE,
	VP_OBJECT_ID,
	VP_OBJECT_TYPE,
	VP_OBJECT_TIME,
	VP_OBJECT_USER_ID,
	VP_WORLD_STATE,
	VP_WORLD_USERS,
	VP_REFERENCE_NUMBER,
	VP_CALLBACK,
	VP_USER_ID,
	VP_USER_REGISTRATION_TIME,
	VP_USER_ONLINE_TIME,
	VP_USER_LAST_LOGIN,
	VP_FRIEND_ID,
	VP_FRIEND_USER_ID,
	VP_FRIEND_ONLINE,
	VP_MY_USER_ID,
	VP_PROXY_TYPE,
	VP_PROXY_PORT,
	VP_CELL_X,
	VP_CELL_Z,
    VP_TERRAIN_TILE_X,
    VP_TERRAIN_TILE_Z,
    VP_TERRAIN_NODE_X,
    VP_TERRAIN_NODE_Z,
    VP_TERRAIN_NODE_REVISION,
    VP_CLICKED_SESSION,
    VP_CHAT_TYPE,
    VP_CHAT_COLOR_RED,
    VP_CHAT_COLOR_GREEN,
    VP_CHAT_COLOR_BLUE,
    VP_CHAT_EFFECTS,
    VP_DISCONNECT_ERROR_CODE,
    VP_URL_TARGET,
    VP_CURRENT_EVENT,
    VP_CURRENT_CALLBACK,
	VP_HIGHEST_INT
} vp_int_attribute_t;
typedef enum vp_float_attribute_t
{
	VP_AVATAR_X,
	VP_AVATAR_Y,
	VP_AVATAR_Z,
	VP_AVATAR_YAW,
	VP_AVATAR_PITCH,
	VP_MY_X,
	VP_MY_Y,
	VP_MY_Z,
	VP_MY_YAW,
	VP_MY_PITCH,
	VP_OBJECT_X,
	VP_OBJECT_Y,
	VP_OBJECT_Z,
	VP_OBJECT_ROTATION_X,
	VP_OBJECT_ROTATION_Y,
	VP_OBJECT_ROTATION_Z,
	VP_OBJECT_YAW = VP_OBJECT_ROTATION_X,
	VP_OBJECT_PITCH = VP_OBJECT_ROTATION_Y,
	VP_OBJECT_ROLL = VP_OBJECT_ROTATION_Z,
	VP_OBJECT_ROTATION_ANGLE,
    VP_TELEPORT_X,
    VP_TELEPORT_Y,
    VP_TELEPORT_Z,
    VP_TELEPORT_YAW,
    VP_TELEPORT_PITCH,
    VP_CLICK_HIT_X,
    VP_CLICK_HIT_Y,
    VP_CLICK_HIT_Z,
	VP_HIGHEST_FLOAT
} vp_float_attribute_t;
typedef enum vp_string_attribute_t
{
	VP_AVATAR_NAME,
	VP_CHAT_MESSAGE,
	VP_OBJECT_MODEL,
	VP_OBJECT_ACTION,
	VP_OBJECT_DESCRIPTION,
	VP_WORLD_NAME,
	VP_USER_NAME,
	VP_USER_EMAIL,
	VP_WORLD_SETTING_KEY,
	VP_WORLD_SETTING_VALUE,
	VP_FRIEND_NAME,
	VP_PROXY_HOST,
    VP_TELEPORT_WORLD,
    VP_URL,
	VP_HIGHEST_STRING
} vp_string_attribute_t;
typedef enum vp_data_attribute_t
{
	VP_OBJECT_DATA,
    VP_TERRAIN_NODE_DATA,
	VP_HIGHEST_DATA
} vp_data_attribute_t;
typedef enum vp_url_target_t {
    VP_URL_TARGET_BROWSER,
    VP_URL_TARGET_OVERLAY
} vp_url_target_t;
typedef vpsdk::VPInstance_ *vp_instance_t;
typedef void* vp_instance_t;
typedef vp_instance_t VPInstance;
typedef void(*VPEventHandler)(VPInstance);
typedef void(*VPCallbackHandler)(VPInstance, int, int);
typedef struct vp_terrain_cell_t {
    float height;
    unsigned short attributes;
} vp_terrain_cell_t;
VPSDK_API int vp_init(int version=VPSDK_VERSION);
VPSDK_API int vp_init(int version);
VPSDK_API VPInstance vp_create(void);
VPSDK_API int vp_destroy(VPInstance instance);
VPSDK_API int vp_connect_universe(VPInstance instance, const char * host, int port);
VPSDK_API int vp_login(VPInstance instance, const char * username, const char * password, const char * botname);
VPSDK_API int vp_wait(VPInstance instance, int milliseconds);
VPSDK_API int vp_enter(VPInstance instance, const char * worldname);
VPSDK_API int vp_leave(VPInstance instance);
VPSDK_API int vp_say(VPInstance instance, const char * message);
VPSDK_API int vp_console_message(VPInstance instance,
                                 int session,
                                 const char* name,
                                 const char* message,
                                 int effects,
                                 unsigned char red,
                                 unsigned char green,
                                 unsigned char blue);
VPSDK_API int vp_event_set(VPInstance instance, vp_event_t eventname, VPEventHandler event);
VPSDK_API int vp_callback_set(VPInstance instance, vp_callback_t callbackname, VPCallbackHandler callback);
VPSDK_API void * vp_user_data(VPInstance instance);
VPSDK_API void vp_user_data_set(VPInstance instance, void * data);
VPSDK_API int vp_state_change(VPInstance instance);
VPSDK_API int vp_int(VPInstance instance, vp_int_attribute_t name);
VPSDK_API float vp_float(VPInstance instance, vp_float_attribute_t name);
VPSDK_API const char* vp_string(VPInstance instance, vp_string_attribute_t name);
VPSDK_API const char* vp_data(VPInstance instance, vp_data_attribute_t name, int* length);
VPSDK_API int vp_int_set(VPInstance instance, vp_int_attribute_t name, int value);
VPSDK_API int vp_float_set(VPInstance instance, vp_float_attribute_t name, float value);
VPSDK_API void vp_string_set(VPInstance instance, vp_string_attribute_t name, const char * str);
VPSDK_API int vp_data_set(VPInstance instance, vp_data_attribute_t name, int length, char* data);
VPSDK_API int vp_query_cell(VPInstance instance, int x, int z);
VPSDK_API int vp_object_add(VPInstance instance);
VPSDK_API int vp_object_bump_begin(vp_instance_t instance,
                                   int object_id, int session_to);
VPSDK_API int vp_object_bump_end(vp_instance_t instance,
                                 int object_id, int session_to);
VPSDK_API int vp_object_change(VPInstance instance);
VPSDK_API int vp_object_click(VPInstance instance, int object_id, 
                              int session_to, float hit_x, 
                              float hit_y, float hit_z);
VPSDK_API int vp_object_delete(VPInstance instance, int object_id);
VPSDK_API int vp_object_get(VPInstance instance, int object_id);
VPSDK_API int vp_world_list(VPInstance instance, int time);
VPSDK_API int vp_user_attributes_by_id(VPInstance instance, int user_id);
VPSDK_API int vp_user_attributes_by_name(VPInstance instance, const char * name);
VPSDK_API int vp_friends_get(VPInstance instance);
VPSDK_API int vp_friend_add_by_name(VPInstance instance, const char* name);
VPSDK_API int vp_friend_delete(VPInstance instance, int friend_id);
VPSDK_API int vp_terrain_query(VPInstance instance, int tile_x, int tile_z, int revision[][4]);
VPSDK_API int vp_terrain_node_set(VPInstance instance, 
                                  int tile_x, int tile_z, 
                                  int node_x, int node_z, 
                                  struct vp_terrain_cell_t* cells);
VPSDK_API int vp_avatar_click(VPInstance instance, int avatar_session);
VPSDK_API int vp_teleport_avatar(VPInstance instance,
                                 int target_session,
                                 const char* world,
                                 float x, float y, float z,
                                 float yaw, float pitch);
VPSDK_API int vp_url_send(VPInstance instance,
                          int session_id,
                          const char* url,
                          vp_url_target_t url_target);